--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
     <script src="js/components/editor-manager.js"></script>
     <script src="js/components/grid-manager.js"></script>
-    <script src="js/components/collapsable-panel.js"></script>
+    <script src="js/components/panels.js"></script>
     <script src="js/components/personas-gui.js"></script>
     <!-- end reusable components -->
 
@@ -79,35 +79,43 @@
       <div class="grid-role-editor">
         <!-- AI area -->
         <div class="card">
-          <div id="card-suggestions-edit" class="alert alert-info hide-in-reviewing">
+          <div class="body alert alert-info hide-in-reviewing">
+            <div id="card-suggestions-edit" class="contents">
 
-          </div>
-
-          <div id="card-suggestions-review" class="alert alert-warning hide-in-editing">
-            <strong>Reviewing Mode Enabled</strong>
-            <p>In reviewing mode, A-MUSE will analyze the response and help your reflect on how well your response appleals to the intended audience.</p>
-            <div id="btn-start-ai-review" class="btn btn-secondary">Review my response</div>
-          </div>
-
-          <div id="card-editor-controls" class="body hide-in-reviewing">
-            Let me&nbsp;:
-            <div id="btg-editor-mode" class="btn-group">
-              <div editor-mode="write" class="btn btn-secondary">Write</div>
-              <div editor-mode="instruct"  class="btn btn-secondary">Instruct</div>
-              <div editor-mode="demonstrate" class="btn btn-secondary">Demonstrate</div>
-              <div editor-mode="ai" class="btn btn-secondary-danger">Handoff to AI</div>
             </div>
           </div>
 
-          <div id="editor">
+          <div class="body alert alert-warning hide-in-editing">
+            <div id="card-suggestions-review" class="contents">
+              <strong>Reviewing Mode Enabled</strong>
+              <p>In reviewing mode, A-MUSE will analyze the response and help your reflect on how well your response appleals to the intended audience.</p>
+              <div id="btn-start-ai-review" class="btn btn-secondary">Review my response</div>
+            </div>
           </div>
-          <div id="toolbar">
-            <button class="ql-bold"></button>
-            <button class="ql-italic"></button>
-            <button class="ql-underline"></button>
 
-            <button class="ql-undo"></button>
-            <button class="ql-redo"></button>
+          <div class="body">
+            <div id="card-editor-controls" class="contents hide-in-reviewing">
+              Let me&nbsp;:
+              <div id="btg-editor-mode" class="btn-group">
+                <div editor-mode="write" class="btn btn-secondary">Write</div>
+                <div editor-mode="instruct"  class="btn btn-secondary">Instruct</div>
+                <div editor-mode="demonstrate" class="btn btn-secondary">Demonstrate</div>
+                <div editor-mode="ai" class="btn btn-secondary-danger">Handoff to AI</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="body">
+            <div id="editor">
+            </div>
+            <div id="toolbar">
+              <button class="ql-bold"></button>
+              <button class="ql-italic"></button>
+              <button class="ql-underline"></button>
+
+              <button class="ql-undo"></button>
+              <button class="ql-redo"></button>
+            </div>
           </div>
         </div>
       </div>
@@ -119,21 +127,25 @@
             KEY POINTS
           </div>
           <div class="body">
-            <div class="form-group">
-              <input type="checkbox" />
-              <label for="">Consider addressing the potentially misleading view about religious influence for the audience.</label>
-            </div>
-            <div class="form-group">
-              <input type="checkbox" />
-              <label for="">Consider the</label>
-            </div>
-            <div class="form-group">
-              <input type="checkbox" />
-              <label for="">Consider the</label>
+            <div class="contents">
+              <div class="form-group">
+                <input type="checkbox" />
+                <label for="">Consider addressing the potentially misleading view about religious influence for the audience.</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" />
+                <label for="">Consider the</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" />
+                <label for="">Consider the</label>
+              </div>
             </div>
           </div>
-          <div class="alert alert-lite">
-            A-MUSE takes into account the points selected above to help you generate a response.
+          <div class="body alert alert-lite">
+            <div class="contents">
+              A-MUSE takes into account the points selected above to help you generate a response.
+            </div>
           </div>
         </div>
 
@@ -142,19 +154,26 @@
             SOURCES
           </div>
           <div class="body">
-            <input type="text" class="form-control" value="" placeholder="Search Sources" />
+            <div class="contents">
+              <input type="text" class="form-control" value="" placeholder="Search Sources" />
+            </div>
           </div>
-          <div class="list">
-            <div class="item">
-              <div class="favicon"></div>
-              <div class="details">
-                Source 1:
-                MBFC:
+          <div class="body list">
+            <div class="contents">
+              <div class="item">
+                <div class="favicon"></div>
+                <div class="details">
+                  Source 1:
+                  MBFC:
+                </div>
               </div>
             </div>
           </div>
-          <div class="alert alert-lite">
-            A-MUSE tries to incorporate the sources selected above to generate a response.
+
+          <div class="body alert alert-lite">
+            <div class="contents">
+              A-MUSE tries to incorporate the sources selected above to generate a response.
+            </div>
           </div>
         </div>
       </div>
@@ -166,14 +185,16 @@
             REFLECTION
           </div>
           <div class="body">
-            Addressed:
-            <ul>
-              <li></li>
-            </ul>
-            Open:
-            <ul>
-              <li></li>
-            </ul>
+            <div class="contents">
+              Addressed:
+              <ul>
+                <li></li>
+              </ul>
+              Open:
+              <ul>
+                <li></li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -182,9 +203,11 @@
             AUDIENCE REACTIONS
           </div>
           <div class="body">
-            <div style = "padding: 0.75rem">Reaction 1</div>
-            <div style = "padding: 0.75rem">Reaction 2</div>
-            <div style = "padding: 0.75rem">Reaction 3</div>
+            <div class="contents">
+              <div style = "padding: 0.75rem">Reaction 1</div>
+              <div style = "padding: 0.75rem">Reaction 2</div>
+              <div style = "padding: 0.75rem">Reaction 3</div>
+            </div>
           </div>
         </div>
       </div>
