--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,12 @@
   </head>
   <body>
     <header>
-      <div class="branding">
-        <div class="icon"></div>
-        Response Tool
-      </div>
+      <a href=".">
+        <div class="branding">
+          <div class="icon"></div>
+          Response Tool
+        </div>
+      </a>
       <div class="controls">
         <div id="grid-controls-main" class="btn-group">
           <div class="btn btn-secondary" switch-to="wiz-planning">
