--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 
     <script src="js/components/editor-manager.js"></script>
     <script src="js/components/grid-manager.js"></script>
+    <script src="js/components/modal.js"></script>
     <script src="js/components/panels.js"></script>
     <script src="js/components/personas-gui.js"></script>
     <!-- end reusable components -->
@@ -81,108 +82,120 @@
       <div class="grid-role-editor">
         <!-- AI area -->
         <div class="card">
-          <div class="body alert alert-info hide-in-reviewing">
-            <div id="card-suggestions-edit" class="contents">
+          <section class="alert hide-in-reviewing">
+            <div class="body alert alert-info">
+              <div id="card-suggestions-edit" class="contents">
 
-            </div>
-          </div>
-
-          <div class="body alert alert-warning hide-in-editing">
-            <div id="card-suggestions-review" class="contents">
-              <strong>Reviewing Mode Enabled</strong>
-              <p>In reviewing mode, A-MUSE will analyze the response and help your reflect on how well your response appleals to the intended audience.</p>
-              <div id="btn-start-ai-review" class="btn btn-secondary">Review my response</div>
-            </div>
-          </div>
-
-          <div class="body">
-            <div id="card-editor-controls" class="contents hide-in-reviewing">
-              Let me&nbsp;:
-              <div id="btg-editor-mode" class="btn-group">
-                <div editor-mode="write" class="btn btn-secondary">Write</div>
-                <div editor-mode="instruct"  class="btn btn-secondary">Instruct</div>
-                <div editor-mode="demonstrate" class="btn btn-secondary">Demonstrate</div>
-                <div editor-mode="ai" class="btn btn-secondary-danger">Handoff to AI</div>
               </div>
             </div>
-          </div>
+          </section>
 
-          <div class="body">
-            <div id="editor">
+          <section class="alert hide-in-editing">
+            <div class="body alert alert-warning">
+              <div id="card-suggestions-review" class="contents">
+                <strong>Reviewing Mode Enabled</strong>
+                <p>In reviewing mode, A-MUSE will analyze the response and help your reflect on how well your response appleals to the intended audience.</p>
+                <div id="btn-start-ai-review" class="btn btn-secondary">Review my response</div>
+              </div>
             </div>
-            <div id="toolbar">
-              <button class="ql-bold"></button>
-              <button class="ql-italic"></button>
-              <button class="ql-underline"></button>
+          </section>
 
-              <button class="ql-undo"></button>
-              <button class="ql-redo"></button>
+          <section class="editor-ai">
+            <div class="body">
+              <div id="card-editor-controls" class="contents hide-in-reviewing">
+                Let me&nbsp;:
+                <div id="btg-editor-mode" class="btn-group">
+                  <div editor-mode="write" class="btn btn-secondary">Write</div>
+                  <div editor-mode="instruct"  class="btn btn-secondary">Instruct</div>
+                  <div editor-mode="demonstrate" class="btn btn-secondary">Demonstrate</div>
+                  <div editor-mode="ai" class="btn btn-secondary-danger">Handoff to AI</div>
+                </div>
+              </div>
             </div>
-          </div>
+          </section>
+
+          <section class="editor-main">
+            <div class="body">
+              <div id="editor">
+              </div>
+              <div id="toolbar">
+                <button class="ql-bold"></button>
+                <button class="ql-italic"></button>
+                <button class="ql-underline"></button>
+
+                <button class="ql-undo"></button>
+                <button class="ql-redo"></button>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
 
       <!-- left sidebar : AI-->
       <div class="grid-role-tools-editing">
-        <div class="card">
-          <div class="title">
-            KEY POINTS
-          </div>
-          <div class="body">
-            <div class="contents">
-              <div class="form-group">
-                <input type="checkbox" />
-                <label for="">Consider addressing the potentially misleading view about religious influence for the audience.</label>
-              </div>
-              <div class="form-group">
-                <input type="checkbox" />
-                <label for="">Consider the</label>
-              </div>
-              <div class="form-group">
-                <input type="checkbox" />
-                <label for="">Consider the</label>
-              </div>
+        <div id="card-key-points" class="card">
+          <section>
+            <div class="title">
+              KEY POINTS
             </div>
-          </div>
-          <div class="body alert alert-lite">
-            <div class="contents">
-              A-MUSE takes into account the points selected above to help you generate a response.
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="title">
-            SOURCES
-          </div>
-          <div class="body">
-            <div class="contents">
-              <input type="text" class="form-control" value="" placeholder="Search Sources" />
-            </div>
-          </div>
-          <div class="body list">
-            <div class="contents">
-              <div class="item">
-                <div class="favicon"></div>
-                <div class="details">
-                  Source 1:
-                  MBFC:
+            <div class="body">
+              <div class="contents">
+                <div class="form-group">
+                  <input type="checkbox" />
+                  <label for="">Consider addressing the potentially misleading view about religious influence for the audience.</label>
+                </div>
+                <div class="form-group">
+                  <input type="checkbox" />
+                  <label for="">Consider the</label>
+                </div>
+                <div class="form-group">
+                  <input type="checkbox" />
+                  <label for="">Consider the</label>
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="body alert alert-lite">
-            <div class="contents">
-              A-MUSE tries to incorporate the sources selected above to generate a response.
+            <div class="body alert alert-lite">
+              <div class="contents">
+                A-MUSE takes into account the points selected above to help you generate a response.
+              </div>
             </div>
-          </div>
+          </section>
+        </div>
+
+        <div id="card-sources" class="card">
+          <section>
+            <div class="title">
+              SOURCES
+            </div>
+            <div class="body">
+              <div class="contents">
+                <input type="text" class="form-control" value="" placeholder="Search Sources" />
+              </div>
+            </div>
+            <div class="body">
+              <div class="contents list">
+                <div class="item">
+                  <div class="favicon"></div>
+                  <div class="details">
+                    Source 1:
+                    MBFC:
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="body alert alert-lite">
+              <div class="contents">
+                A-MUSE tries to incorporate the sources selected above to generate a response.
+              </div>
+            </div>
+          </section>
         </div>
       </div>
 
       <!-- left sidebar : reflection -->
       <div class="grid-role-tools-reviewing">
-        <div class="card">
+        <div id="card-reflection" class="card">
           <div class="title">
             REFLECTION
           </div>
@@ -200,28 +213,13 @@
           </div>
         </div>
 
-        <div class="card">
-          <div class="title">
-            AUDIENCE REACTIONS
-          </div>
-          <div class="body">
-            <div class="contents">
-              <div style = "padding: 0.75rem">Reaction 1</div>
-              <div style = "padding: 0.75rem">Reaction 2</div>
-              <div style = "padding: 0.75rem">Reaction 3</div>
-            </div>
-          </div>
-        </div>
+        <div id="card-reactions" class="card"></div>
       </div>
 
       <!-- spacer -->
       <div class="grid-role-spacer"></div>
     </main>
 
-    <div class="modal">
-      <div class="modal-dialog">
-      </div>
-      <div class="modal-background"></div>
-    </div>
+    <div id="modal" class="modal"></div>
   </body>
 </html>
